finalize DB config and setup login, register method
